--- a/grails-app/assets/stylesheets/grails.css
+++ b/grails-app/assets/stylesheets/grails.css
@@ -96,7 +96,7 @@ a.navbar-brand {
     }
 }
 
-/* specific to index.html */
+/* specific to indexInvestigation.html */
 
 @media (max-width: 999px) {
     #fork-me {
