tryying to render a map with bootstrap

--- a/grails-app/assets/stylesheets/lcm-app.css
+++ b/grails-app/assets/stylesheets/lcm-app.css
@@ -13,7 +13,7 @@
     height: 15px;
 }
 
-.table .thead-blue th {
+.thead thead-blue  thead {
     background-color: cornflowerblue;
     foreground-color: cornflowerblue;
 }
