tryying to render a map with bootstrap

--- a/grails-app/assets/stylesheets/lcm-app.css
+++ b/grails-app/assets/stylesheets/lcm-app.css
@@ -9,7 +9,7 @@
 
 .table-condensed thead tr th{
     font-size: 0.8em;
-    padding: 10px 0 5px 0 !important;
+    padding: 10px 20px 5px 0 !important;
     height: 15px;
 }
 
