--- a/grails-app/assets/stylesheets/lcm-app.css
+++ b/grails-app/assets/stylesheets/lcm-app.css
@@ -15,10 +15,15 @@
 }
 
 /* this doesnt do a thing on any <thead class="thead-blue" - no idea why  */
-.thead-blue thead tr th{
+.thead-blue {
     background-color: cornflowerblue !important;
 }
 
+.tbody-condensed {
+    font-size: 0.7em !important;
+}
+
+/* added to set the width of button that sits around icon in rendered field   */
 .btn-icon-fixed-width {
     width: 40px !important;
 }
