fixed bsf-main and fixed width of icon buttons on field text

--- a/grails-app/assets/stylesheets/lcm-app.css
+++ b/grails-app/assets/stylesheets/lcm-app.css
@@ -7,6 +7,10 @@
     float: none;
 }
 
+table {
+    margin:0px !important;
+}
+
 /* this works and colours the headers */
 .table-condensed thead tr th{
     background-color: lightblue ;
