--- a/grails-app/assets/stylesheets/lcm-app.css
+++ b/grails-app/assets/stylesheets/lcm-app.css
@@ -31,3 +31,9 @@ table {
 .btn-icon-fixed-width {
     width: 40px !important;
 }
+
+/* enable auto scroll bars for cards etc */
+.scroll {
+    max-height: 400em;
+    overflow-y: auto;
+}
