basic table dropdown and links

--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -222,7 +222,7 @@ fieldset,
 .fieldcontain .property-label {
     color: #666666;
     text-align: right;
-    width: 25%;
+    width: 15%; /*  adjusted by WW */
 }
 
 .fieldcontain .property-label {
@@ -231,7 +231,7 @@ fieldset,
 
 .fieldcontain .property-value {
     display: block;
-    margin-left: 27%;
+    margin-left: 8%;  /* WW adjusted */
 }
 
 label {
